--- a/styles/css/index.css
+++ b/styles/css/index.css
@@ -237,7 +237,7 @@ html footer .icon, body footer .icon {
   padding-bottom: 10vh;
 }
 
-.main-subheader, .main-subheader__slider, .main-subheader__left {
+.main-subheader, .main-subheader__optional, .main-subheader__slider, .main-subheader__left {
   font-size: calc(28px + 22 * ((100vw - 375px) / 1545));
   font-family: "Tektur", cursive;
   font-weight: 500;
@@ -246,7 +246,7 @@ html footer .icon, body footer .icon {
   text-align: center;
 }
 @media (min-width: 980px) {
-  .main-subheader, .main-subheader__slider, .main-subheader__left {
+  .main-subheader, .main-subheader__optional, .main-subheader__slider, .main-subheader__left {
     text-align: center;
   }
 }
@@ -260,6 +260,16 @@ html footer .icon, body footer .icon {
 }
 @media (min-width: 980px) {
   .main-subheader__slider {
+    text-align: left;
+  }
+}
+@media (max-width: 980px) {
+  .main-subheader__optional {
+    text-align: center;
+  }
+}
+@media (min-width: 980px) {
+  .main-subheader__optional {
     text-align: left;
   }
 }
